# DSA-Population

./: .gitignore  README.md  blog.md  clean_data.ipynb  data_preprocess.py  merge_data.ipynb  model.py  modelexp.py  preprocess_all_data.py  preprocess_gdp.py  project.ipynb  pyproject.toml  requirements.txt  temp.csv  tuomas_data_model.ipynb  tuomas_data_plotting.ipynb  tuomas_population_data.ipynb
data/: WB_WDI_SP_DYN_LE00_IN_WIDEF.csv  WPP2024_Demographic_Indicators_notes.csv  all_data.csv  cleanWDI.csv  clean_data.csv  clean_gdp_df.csv  cleaned_all_data.csv  cleaned_pop_df.csv  cleaned_pop_gdp_relig_df.csv  cleaned_pop_relig_df.csv  cleaned_relig_df.csv  new_relig_df.csv  pop_relig_inner.csv  population_country_data.csv  religion_base.csv  religion_country_data.csv  religion_enriched.csv  wdi_gdp_data.csv
data_gdp/: Data Format Convertion.ipynb  GDP.csv  cleaned.csv  gdp_data.csv  sammy.ipynb  working_on_cleaned.ipynb
data_gdp/.ipynb_checkpoints/: Data Format Convertion-checkpoint.ipynb
database/: __init__.py  data.db  importer.py  models.py  utils.py
docs/: dbguide.md
modeling/: lagging_model.ipynb  model_change.ipynb  model_gdp_no_cc.ipynb  model_new.ipynb  model_no_gdp_cc.ipynb
raw_data/: d8bf9016-48ec-453e-b74e-ae48b7d39d81_Data.csv  ff9f9047-7a2a-4f98-a0a5-192c04cbc195_Data.csv  preprocess.py
