[project]
name = "DSA-population"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "notebook (>=7.4.5,<8.0.0)",
    "pycountry (>=24.6.1,<25.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "scipy (>=1.16.2,<2.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
